--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Enheden har brug for opmærksomhed.",
     "CL_DV_RF_next_cleaning_will_be": "Næste rengøring vil være **",
     "CL_DV_RF_last_clean_was": "Sidste rengøring var **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Rengørings- og plejetips",
     "CL_CF_AS_needs_attention": "Enheden har brug for opmærksomhed.",
     "CL_CF_AS_run_normal_condition": "Din enhed kører i normal tilstand.",
     "CL_DV_WM_offline_content1": "Tjek, om dit apparat er tilsluttet, og om strømmen er tændt.",
