--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Η συσκευή θέλει προσοχή.",
     "CL_DV_RF_next_cleaning_will_be": "Ο επόμενος καθαρισμός θα είναι **",
     "CL_DV_RF_last_clean_was": "Ο τελευταίος καθαρισμός ήταν **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Συμβουλές καθαρισμού και φροντίδας",
     "CL_CF_AS_needs_attention": "Η συσκευή θέλει προσοχή.",
     "CL_CF_AS_run_normal_condition": "Η συσκευή σας λειτουργεί σε κανονική κατάσταση.",
     "CL_DV_WM_offline_content1": "Ελέγξτε εάν η συσκευή σας είναι συνδεδεμένη και η τροφοδοσία είναι ενεργοποιημένη.",
