--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "The device needs attention.",
     "CL_DV_RF_next_cleaning_will_be": "Next cleaning will be **",
     "CL_DV_RF_last_clean_was": "Last cleaning was **",
-    "CL_CF_AS_cleaning_and_care_tips": "cleaning and care tips",
+    "CL_CF_AS_cleaning_and_care_tips": "Cleaning and Care Tips",
     "CL_CF_AS_needs_attention": "The device needs attention.",
     "CL_CF_AS_run_normal_condition": "Your device runs in normal condition.",
     "CL_DV_WM_offline_content1": "Check if your device is plugged in and the power is on.",
