--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "دستگاه نیاز به توجه دارد.",
     "CL_DV_RF_next_cleaning_will_be": "پاکسازی بعدی خواهد بود **",
     "CL_DV_RF_last_clean_was": "آخرین نظافت بود **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "نکات تمیز کردن و مراقبت",
     "CL_CF_AS_needs_attention": "دستگاه نیاز به توجه دارد.",
     "CL_CF_AS_run_normal_condition": "دستگاه شما در شرایط عادی کار می کند.",
     "CL_DV_WM_offline_content1": "بررسی کنید که دستگاه شما متصل شده و برق روشن است.",
