--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "המכשיר זקוק לתשומת לב.",
     "CL_DV_RF_next_cleaning_will_be": "הניקוי הבא יהיה **",
     "CL_DV_RF_last_clean_was": "הניקוי האחרון היה **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "טיפים לניקוי וטיפול",
     "CL_CF_AS_needs_attention": "המכשיר זקוק לתשומת לב.",
     "CL_CF_AS_run_normal_condition": "המכשיר שלך פועל במצב רגיל.",
     "CL_DV_WM_offline_content1": "בדוק אם המכשיר מחובר והכוח מופעל.",
