--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "डिवाइस पर ध्यान देने की आवश्यकता है।",
     "CL_DV_RF_next_cleaning_will_be": "अगली सफ़ाई ** होगी",
     "CL_DV_RF_last_clean_was": "पिछली सफ़ाई ** थी",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "सफाई और देखभाल के सुझाव",
     "CL_CF_AS_needs_attention": "डिवाइस पर ध्यान देने की आवश्यकता है।",
     "CL_CF_AS_run_normal_condition": "आपका डिवाइस सामान्य स्थिति में चलता है.",
     "CL_DV_WM_offline_content1": "यह सुनिश्चित करें कि आपका यंत्र प्लग इन किया गया है और पावर चालू है।",
