--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Uređaj zahtijeva pažnju.",
     "CL_DV_RF_next_cleaning_will_be": "Sljedeće čišćenje će biti **",
     "CL_DV_RF_last_clean_was": "Zadnje čišćenje je bilo **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Savjeti za čišćenje i njegu",
     "CL_CF_AS_needs_attention": "Uređaj zahtijeva pažnju.",
     "CL_CF_AS_run_normal_condition": "Vaš uređaj radi u normalnom stanju.",
     "CL_DV_WM_offline_content1": "Provjerite je li uređaj priključen i ima li napajanje.",
