--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "A készülék figyelmet igényel.",
     "CL_DV_RF_next_cleaning_will_be": "A következő takarítás **",
     "CL_DV_RF_last_clean_was": "Az utolsó takarítás **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Tisztítási és ápolási tippek",
     "CL_CF_AS_needs_attention": "A készülék figyelmet igényel.",
     "CL_CF_AS_run_normal_condition": "A készülék normál állapotban működik.",
     "CL_DV_WM_offline_content1": "Ellenőrizze, hogy a készülék csatlakozik-e és be van-e kapcsolva az áram.",
