--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Perangkat ini perlu perhatian.",
     "CL_DV_RF_next_cleaning_will_be": "Pembersihan selanjutnya akan **",
     "CL_DV_RF_last_clean_was": "Pembersihan terakhir adalah **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Tips Membersihkan dan Merawat",
     "CL_CF_AS_needs_attention": "Perangkat ini perlu perhatian.",
     "CL_CF_AS_run_normal_condition": "Perangkat Anda berjalan dalam kondisi normal.",
     "CL_DV_WM_offline_content1": "Periksa apakah perangkat Anda terhubung dan daya sudah dinyalakan.",
