--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "デバイスに注意が必要です。",
     "CL_DV_RF_next_cleaning_will_be": "次回の清掃は**",
     "CL_DV_RF_last_clean_was": "前回の清掃は**",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "クリーニングとお手入れのヒント",
     "CL_CF_AS_needs_attention": "デバイスに注意が必要です。",
     "CL_CF_AS_run_normal_condition": "デバイスは正常に動作しています。",
     "CL_DV_WM_offline_content1": "機器が差し込まれ、電源がオンになっているか確認してください。",
