--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Құрылғы назар аударуды қажет етеді.",
     "CL_DV_RF_next_cleaning_will_be": "Келесі тазалау ** болады",
     "CL_DV_RF_last_clean_was": "Соңғы тазалау ** болды",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Тазалау және күту бойынша кеңестер",
     "CL_CF_AS_needs_attention": "Құрылғы назар аударуды қажет етеді.",
     "CL_CF_AS_run_normal_condition": "Құрылғы қалыпты жағдайда жұмыс істейді.",
     "CL_DV_WM_offline_content1": "Құрылғының салымын тексеріңіз және қуатты болуын тексеріңіз.",
