--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "장치에 주의가 필요합니다.",
     "CL_DV_RF_next_cleaning_will_be": "다음 청소는 **입니다",
     "CL_DV_RF_last_clean_was": "마지막 청소는 **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "청소 및 관리 팁",
     "CL_CF_AS_needs_attention": "장치에 주의가 필요합니다.",
     "CL_CF_AS_run_normal_condition": "귀하의 기기는 정상적인 상태에서 작동합니다.",
     "CL_DV_WM_offline_content1": "기기가 연결되어 있고 전원이 켜져 있는지 확인하세요.",
