--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "На уредот му треба внимание.",
     "CL_DV_RF_next_cleaning_will_be": "Следното чистење ќе биде **",
     "CL_DV_RF_last_clean_was": "Последното чистење беше **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Совети за чистење и нега",
     "CL_CF_AS_needs_attention": "На уредот му треба внимание.",
     "CL_CF_AS_run_normal_condition": "Вашиот уред работи во нормална состојба.",
     "CL_DV_WM_offline_content1": "Проверете дали уредот е приклучен и дали има струја.",
