--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Enheten trenger oppmerksomhet.",
     "CL_DV_RF_next_cleaning_will_be": "Neste rengjøring vil være **",
     "CL_DV_RF_last_clean_was": "Siste rengjøring var **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Rengjørings- og pleietips",
     "CL_CF_AS_needs_attention": "Enheten trenger oppmerksomhet.",
     "CL_CF_AS_run_normal_condition": "Enheten din kjører i normal tilstand.",
     "CL_DV_WM_offline_content1": "Sjekk om apparatet er plugget inn og strømmen er på.",
