--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Het apparaat heeft aandacht nodig.",
     "CL_DV_RF_next_cleaning_will_be": "Volgende schoonmaak is **",
     "CL_DV_RF_last_clean_was": "Laatste schoonmaak was **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Reinigings- en verzorgingstips",
     "CL_CF_AS_needs_attention": "Het apparaat heeft aandacht nodig.",
     "CL_CF_AS_run_normal_condition": "Uw apparaat functioneert normaal.",
     "CL_DV_WM_offline_content1": "Controleer of je wijnkast aangesloten is en of de stroom is ingeschakeld",
