--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Urządzenie wymaga uwagi.",
     "CL_DV_RF_next_cleaning_will_be": "Następne sprzątanie będzie **",
     "CL_DV_RF_last_clean_was": "Ostatnie sprzątanie było **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Wskazówki dotyczące czyszczenia i pielęgnacji",
     "CL_CF_AS_needs_attention": "Urządzenie wymaga uwagi.",
     "CL_CF_AS_run_normal_condition": "Twoje urządzenie działa normalnie.",
     "CL_DV_WM_offline_content1": "Sprawdź, czy urządzenie jest podłączone do prądu i czy zasilanie jest włączone.",
