--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "O dispositivo precisa de atenção.",
     "CL_DV_RF_next_cleaning_will_be": "A próxima limpeza será **",
     "CL_DV_RF_last_clean_was": "A última limpeza foi **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Dicas de limpeza e cuidados",
     "CL_CF_AS_needs_attention": "O dispositivo precisa de atenção.",
     "CL_CF_AS_run_normal_condition": "Seu dispositivo funciona em condições normais.",
     "CL_DV_WM_offline_content1": "Verifique se o seu equipamento está ligado à corrente e se está a funcionar.",
