--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Устройство требует внимания.",
     "CL_DV_RF_next_cleaning_will_be": "Следующая уборка будет **",
     "CL_DV_RF_last_clean_was": "Последняя уборка была **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Советы по чистке и уходу",
     "CL_CF_AS_needs_attention": "Устройство требует внимания.",
     "CL_CF_AS_run_normal_condition": "Ваше устройство работает в нормальном состоянии.",
     "CL_DV_WM_offline_content1": "Проверьте, подключен ли ваш прибор и включена ли питание.",
