--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Zariadenie vyžaduje pozornosť.",
     "CL_DV_RF_next_cleaning_will_be": "Ďalšie čistenie bude **",
     "CL_DV_RF_last_clean_was": "Posledné čistenie bolo **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Tipy na čistenie a starostlivosť",
     "CL_CF_AS_needs_attention": "",
     "CL_CF_AS_run_normal_condition": "",
     "CL_DV_WM_offline_content1": "Skontrolujte, či je vaše zariadenie zapojené a napájanie je zapnuté.",
