--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Naprava potrebuje pozornost.",
     "CL_DV_RF_next_cleaning_will_be": "Naslednje čiščenje bo **",
     "CL_DV_RF_last_clean_was": "Zadnje čiščenje je bilo **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Nasveti za čiščenje in nego",
     "CL_CF_AS_needs_attention": "Naprava potrebuje pozornost.",
     "CL_CF_AS_run_normal_condition": "Vaša naprava deluje v normalnem stanju.",
     "CL_DV_WM_offline_content1": "Preverite, ali je vaša naprava priključena in ali je vklopljena.",
