--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Уређају је потребна пажња.",
     "CL_DV_RF_next_cleaning_will_be": "Следеће чишћење ће бити **",
     "CL_DV_RF_last_clean_was": "Последње чишћење је било **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Савети за чишћење и негу",
     "CL_CF_AS_needs_attention": "Уређају је потребна пажња.",
     "CL_CF_AS_run_normal_condition": "Ваш уређај ради у нормалном стању.",
     "CL_DV_WM_offline_content1": "Проверите да ли је ваш уређај укључен и да ли је напајање укључено.",
