--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Enheten behöver uppmärksamhet.",
     "CL_DV_RF_next_cleaning_will_be": "Nästa städning blir **",
     "CL_DV_RF_last_clean_was": "Senaste städningen var **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Rengörings- och skötseltips",
     "CL_CF_AS_needs_attention": "Enheten behöver uppmärksamhet.",
     "CL_CF_AS_run_normal_condition": "Din enhet fungerar i normalt skick.",
     "CL_DV_WM_offline_content1": "Kontrollera om din apparat är inkopplad och att strömmen är på.",
