--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "อุปกรณ์ต้องได้รับความใส่ใจ",
     "CL_DV_RF_next_cleaning_will_be": "การทำความสะอาดครั้งต่อไปจะ**",
     "CL_DV_RF_last_clean_was": "ทำความสะอาดครั้งสุดท้ายคือ **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "เคล็ดลับการทำความสะอาดและการดูแล",
     "CL_CF_AS_needs_attention": "อุปกรณ์ต้องได้รับความใส่ใจ",
     "CL_CF_AS_run_normal_condition": "อุปกรณ์ของคุณทำงานในสภาพปกติ",
     "CL_DV_WM_offline_content1": "ตรวจสอบว่าเครื่องใช้ของคุณได้ถูกเสียบปลั๊กและเปิดไฟอยู่หรือไม่",
