--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Cihazın bakıma ihtiyacı var.",
     "CL_DV_RF_next_cleaning_will_be": "Bir sonraki temizlik ** olacak",
     "CL_DV_RF_last_clean_was": "Son temizlik **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Temizlik ve Bakım İpuçları",
     "CL_CF_AS_needs_attention": "Cihazın bakıma ihtiyacı var.",
     "CL_CF_AS_run_normal_condition": "Cihazınız normal durumda çalışmaktadır.",
     "CL_DV_WM_offline_content1": "Cihazınızın takılı olduğunu ve gücünün açık olduğunu kontrol edin.",
