--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Thiết bị này cần được chú ý.",
     "CL_DV_RF_next_cleaning_will_be": "Lần vệ sinh tiếp theo sẽ là **",
     "CL_DV_RF_last_clean_was": "Lần vệ sinh cuối cùng là **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Mẹo vệ sinh và chăm sóc",
     "CL_CF_AS_needs_attention": "Thiết bị này cần được chú ý.",
     "CL_CF_AS_run_normal_condition": "Thiết bị của bạn hoạt động bình thường.",
     "CL_DV_WM_offline_content1": "Kiểm tra xem thiết bị của bạn đã được cắm và nguồn đã được bật.",
