--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "該設備需要注意。",
     "CL_DV_RF_next_cleaning_will_be": "下次清潔將是**",
     "CL_DV_RF_last_clean_was": "上次清潔時間是**",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "清潔和護理技巧",
     "CL_CF_AS_needs_attention": "該設備需要注意。",
     "CL_CF_AS_run_normal_condition": "您的設備運作正常。",
     "CL_DV_WM_offline_content1": "检查电源线是否连接，设备是否上电开机。",
