--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "L'appareil a besoin d'attention.",
     "CL_DV_RF_next_cleaning_will_be": "Le prochain nettoyage sera **",
     "CL_DV_RF_last_clean_was": "Le dernier nettoyage était **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Conseils de nettoyage et d'entretien",
     "CL_CF_AS_needs_attention": "L'appareil a besoin d'attention.",
     "CL_CF_AS_run_normal_condition": "Votre appareil fonctionne dans des conditions normales.",
     "CL_DV_WM_offline_content1": "Vérifiez si votre appareil est branché et que l'alimentation est allumée.",
