--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4598,7 +4598,7 @@
     "CL_CF_CO_device_needs_attention": "Dispozitivul necesită atenție.",
     "CL_DV_RF_next_cleaning_will_be": "Următoarea curățare va fi **",
     "CL_DV_RF_last_clean_was": "Ultima curatenie a fost **",
-    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_cleaning_and_care_tips": "Sfaturi de curățare și îngrijire",
     "CL_CF_AS_needs_attention": "Dispozitivul necesită atenție.",
     "CL_CF_AS_run_normal_condition": "Aparatul dumneavoastră funcționează în stare normală.",
     "CL_DV_WM_offline_content1": "Verificați dacă aparatul dumneavoastră este conectat la priză și dacă alimentarea este pornită.",
